# data-flow-ppa

./: README.md
01/: .gitignore  README.md  x01.cabal
01-reaching-def-naive/: README.md  reaching-def-naive.cabal
01-reaching-def-naive/src/: Pretty.hs
01/src/: Ast.hs  Equations.hs  Examples.hs
02/: README.md  x02.cabal
02-available-expr-naive/: README.md  available-expr-naive.cabal
02-available-expr-naive/src/: Analysis.hs  Ast.hs  Pretty.hs
02/src/: Ast.hs  Examples.hs  Pretty.hs  Utils.hs
03-available-expr/: README.md  available-expr.cabal
03-available-expr/src/: Analysis.hs  Context.hs  Examples.hs  Properties.hs  Runner.hs  Utils.hs
04-reaching-def/: .gitignore  README.md  reaching-defs.cabal
04-reaching-def/src/: Analysis.hs  Context.hs  Examples.hs  Pretty.hs  Runner.hs  Utils.hs
