cabal-version:   3.0
name:            reaching-def-naive
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files:
    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Ast,
        Equations,
        Examples,
        Pretty
    build-depends:
        base ^>=4.18.0.0,
        containers,
        s-cargot
    hs-source-dirs:   src
    default-language: Haskell2010
