cabal-version:   3.0
name:            x02
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files:
    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Pretty,
        Ast,
        Utils,
        Examples,
        Properties
    build-depends:
        base,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010
